test: 修复ListUtilsTest